20240803 - Templates : Tags - url 태그와 템플릿 참조

--- a/my_app/templates/my_app/variable.html
+++ b/my_app/templates/my_app/variable.html
@@ -24,7 +24,7 @@
 
     <h2>Are you {{ first_name | upper }}?</h2>
     <h2>{{ last_name | lower | capfirst }} {{ first_name | lower | capfirst }}</h2>
-    <h2>{{ some_list.0 }}</h2> <!-- some_list의 0번째 인데스 값 1 -->
+    <h2>{{ some_list.0 }}</h2> <!-- some_list의 0번째 인데스 값 = 1 -->
     <h2>{{ some_dict.inside_key | length }}</h2>
     <h2>{# 주석 입니다:) #}</h2>
     <!-- For Loops -->
