--- a/my_app/templates/my_app/example.html
+++ b/my_app/templates/my_app/example.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>Bonjour!🍊</h1>
+    <h1>EXAMPLE HTML TEMPLATE</h1>
+    <h1><a href = "{% url "my_app:example02"  %}">클릭</a></h1>
+
 </body>
 </html>
