20240803 - Templates : Tags - 템플릿 상속

--- a/my_app/templates/my_app/example02.html
+++ b/my_app/templates/my_app/example02.html
@@ -1,12 +1,5 @@
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>EXAMPLE02</title>
-</head>
-<body>
-    <h1>This is EXAMPLE02 page🤗</h1>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+	<h1>THIS IS THE BLOCK IN EXAMPLE02.HTML 😎</h1>
+{% endblock %}
