--- a/cars/templates/cars/add.html
+++ b/cars/templates/cars/add.html
@@ -1,5 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Add</h1>
+    <div class="container">
+        <h1>Add</h1>
+        <h2>Add a new car to the DB</h2>
+        <form action = "" method = "post">
+            {% csrf_token %}
+            <div class = "form-group">
+                <label for = "brand">Brand</label>
+                <input type = "text" class = "form-control" name = "brand" id = "brand">
+            </div>
+            <div class = "form-group">
+                <label for = "year">Year</label>
+                <input type = "text" class = "form-control" name = "year" id = "year">
+            </div>
+            <input type = "submit" class = "btn btn-primary">
+        </form>
+    </div>
 {% endblock %}
