--- a/cars2/templates/cars2/rental_review.html
+++ b/cars2/templates/cars2/rental_review.html
@@ -2,14 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Title</title>
 </head>
 <body>
-    <h1>Rental Review😇</h1>
-    <form action = "" method = "post">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit">
-    </form>
+    <h1>📋RENTAL REVIEW FORM</h1>
+    <div class = "container">
+        <form action = "" method = "post">
+            {% csrf_token %}
+    {#        {{ form.as_p }}#}
+            <!-- for loop 사용 가능 -->
+            {% for field in form %}
+                <div class = "mb-3">
+                    {{ field.label_tag }}
+                </div>
+                {{ field }}
+            {% endfor %}
+
+            <!-- 특정 필드의 속성만 사용 가능 but, 이런 세부 사항으로 할 바엔 html 폼으로 시작하는 게 나음 -->
+    {#        {{ form.first_name.label_tag }} {{ form.first_name }}#}
+    {#        <div>#}
+    {#            <p>{{ form.last_name.label_tag }} {{ form.last_name }}</p>#}
+    {#        </div>#}
+            <input type="submit" class = "btn btn-primary">
+        </form>
+    </div>
 </body>
 </html>
