--- a/cars2/templates/cars2/rental_review.html
+++ b/cars2/templates/cars2/rental_review.html
@@ -21,6 +21,7 @@
                     {{ field.label_tag }}
                 </div>
                 {{ field }}
+                {{ field.errors }}
             {% endfor %}
 
             <!-- 특정 필드의 속성만 사용 가능 but, 이런 세부 사항으로 할 바엔 html 폼으로 시작하는 게 나음 -->
