20240808 - Django CBV : FormView

--- a/classroom/templates/classroom/home.html
+++ b/classroom/templates/classroom/home.html
@@ -10,6 +10,9 @@
         <li>
             <a href = "{% url 'classroom:thank_you' %}">THX page link</a>
         </li>
+        <li>
+            <a href = "{% url 'classroom:contact' %}">Contact form page link</a>
+        </li>
     </ul>
 </body>
 </html>
