--- a/classroom/templates/classroom/home.html
+++ b/classroom/templates/classroom/home.html
@@ -13,6 +13,9 @@
         <li>
             <a href = "{% url 'classroom:contact' %}">Contact form page link</a>
         </li>
+        <li>
+            <a href = "{% url 'classroom:create_teacher' %}">Create NEW Teacher page link</a>
+        </li>
     </ul>
 </body>
 </html>
