20240808 - Django CBV : ListView

--- a/classroom/templates/classroom/home.html
+++ b/classroom/templates/classroom/home.html
@@ -11,10 +11,13 @@
             <a href = "{% url 'classroom:thank_you' %}">THX page link</a>
         </li>
         <li>
-            <a href = "{% url 'classroom:contact' %}">Contact form page link</a>
+            <a href = "{% url 'classroom:contact' %}">Contact FORM page link</a>
         </li>
         <li>
             <a href = "{% url 'classroom:create_teacher' %}">Create NEW Teacher page link</a>
+        </li>
+        <li>
+            <a href = "{% url 'classroom:list_teacher' %}">Teacher LIST page link</a>
         </li>
     </ul>
 </body>
