--- a/classroom/templates/classroom/teacher_list.html
+++ b/classroom/templates/classroom/teacher_list.html
@@ -8,7 +8,10 @@
     <h1>Teacher List</h1>
     <ul>
         {% for teacher in teachers %}
-            <li><a href = "/classroom/detail_teacher/{{ teacher.id }}">{{ teacher.first_name }} {{ teacher.last_name }}</a></li>
+            <li>
+                <a href = "/classroom/detail_teacher/{{ teacher.id }}">{{ teacher.first_name }} {{ teacher.last_name }}</a>
+                <button onclick = "location.href = '/classroom/update_teacher/{{ teacher.id }}'">수정</button>
+            </li>
         {% endfor %}
     </ul>
 </body>
